--- a/src/components/Dialog/Dialog.module.scss
+++ b/src/components/Dialog/Dialog.module.scss
@@ -10,7 +10,8 @@ $dark-innerBGColor: #b9b9b9;
   width: 100vw;
   height: 100vh;
   z-index: 100;
-  position: absolute;
+  position: fixed;
+  overflow: hidden;
   top: 0;
   left: 0;
   display: flex;
@@ -18,6 +19,7 @@ $dark-innerBGColor: #b9b9b9;
   align-items: center;
 
   h3, p {
+    text-align: start;
     align-self: flex-start;
     margin-bottom: 20px;
   }
@@ -52,6 +54,14 @@ $dark-innerBGColor: #b9b9b9;
   flex-direction: column;
   justify-content: space-around;
   border: 1px solid black;
+
+  p{
+    width: 90%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
 }
 
 .buttons {
@@ -80,12 +90,17 @@ $dark-innerBGColor: #b9b9b9;
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 768px) {
   .innerDialog, .innerDialogDark {
-    width: 100%;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    width: 90%;
     padding: 20px;
+    
+    p{
+      width: 90%;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+    
   }
 }
