--- a/src/components/Note/Note.module.scss
+++ b/src/components/Note/Note.module.scss
@@ -1,6 +1,7 @@
 .note {
+  position: relative;
   text-align: center;
-  list-style:none;
+  list-style: none;
   width: 180px;
   height: 180px;
   padding-top: 10px;
@@ -24,13 +25,13 @@
 }
 
 .deleteButton {
-  top: -5%;
-  right: -5%;
+  top: -10%;
+  right: -10%;
   position: absolute;
   background-color: red;
   color: white;
-  width: 32px;
-  height: 32px;
+  width: 40px;
+  height: 40px;
   border: none;
   border-radius: 100%;
   cursor: pointer;
@@ -55,5 +56,23 @@
 
   &:hover {
     transform: rotate(0deg);
+  }
+}
+
+@media (max-width: 768px) {
+  .note {
+    &:hover {
+      box-shadow: 5px 5px 7px #212121b3;
+      transform: scale(1);
+      z-index: 1;
+    }
+  }
+  .link{
+    &:nth-child(even):hover {
+      transform: rotate(-6deg);
+    }
+    &:nth-child(odd):hover {
+      transform: rotate(6deg);
+    }
   }
 }
