--- a/src/components/NotePage/NotePage.module.scss
+++ b/src/components/NotePage/NotePage.module.scss
@@ -1,9 +1,7 @@
 .noteLayout {
-  width: 100%;
-  height: 65vh;
-  margin: 20px;
-  padding: 100px 80px 0;
-  border-radius: 20px;
+  padding: 100px;
+  border-radius: 10px;
+  margin-top: 30px;
   text-align: center;
   position: relative;
   overflow: auto;
@@ -51,8 +49,8 @@
   }
 
   .deleteButton {
-    top: 5px;
-    right: 5px;
+    top: -0;
+    right: -0;
     box-shadow: 3px 3px 5px black;
     border-radius: 10px;
   }
